<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_label">About</string>
    <string name="about_us_banben">Version:\u0009%1$s</string>
    <string name="about_us_name">HUAWEI DevEco Assistant</string>
    <string name="app_copyright">%1$s Copyright ©%2$s</string>
    <string name="app_manage">Apps</string>
    <string name="app_name">HUAWEI DevEco Assistant</string>
    <string name="cancel">Cancel</string>
    <string name="caveat">This app is required to use HUAWEI DevEco Assistant.</string>
    <string name="check_update">Updates</string>
    <string name="clear_log_btn">Clear</string>
    <string name="close_dialog">Close</string>
    <string name="close_log">Stop</string>
    <string name="connect_device_fail">Failed to obtain device information. Ensure that the device is connected in the Huawei Health app.</string>
    <string name="connect_devide">Connect</string>
    <string name="copy">Copy</string>
    <string name="date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="device_not_connect">The device is not connected</string>
    <string name="dialog_jump_yes">Continue</string>
    <string name="dialog_know_title">Enable permission</string>
    <string name="diao_install_information_yes">Install</string>
    <string name="diao_primission_str">Enable storage permission first.</string>
    <string name="double_click_exit">Tap again to exit the app</string>
    <string name="emui_text_font_family_medium">HwChinese-medium</string>
    <string name="emui_text_font_family_regular">sans-serif</string>
    <string name="file_too_large">Installation failed: File too large.</string>
    <string name="function_introduction">For debugging distributed apps</string>
    <string name="history_recording">Previous searches</string>
    <string name="hwedittext_font_family">@string/emui_text_font_family_regular</string>
    <string name="install">Install</string>
    <string name="install_fail">Installation failed:\u0009</string>
    <string name="install_start">Installing...</string>
    <string name="install_success">App installed.</string>
    <string name="install_title">Install</string>
    <string name="installing">Transferring…</string>
    <string name="jump_message">This will open in the Huawei Health app. Continue?</string>
    <string name="jump_title">Confirm</string>
    <string name="log_list_lable">Logs</string>
    <string name="log_loading">Loading content...</string>
    <string name="my_permission_reason_storage">Used to access the HAP files</string>
    <string name="open_log">Start</string>
    <string name="open_source_license">Open source license</string>
    <string name="open_source_software_notice_file">openSourceSoftwareNotice_%1$s_%2$s.htm</string>
    <string name="open_source_str">Open Source Licenses</string>
    <string name="privacy_agree_all">"This app requires an %1$s connection and the %2$s permission to obtain device, network, and distributed app installation package information for auxiliary tests.
By touching AGREE, you agree to the above content and %3$s."</string>
    <string name="privacy_connect_network">Internet</string>
    <string name="privacy_connect_storage">Storage</string>
    <string name="prompt">Install the Huawei Health app first.</string>
    <string name="refresh_devide">Refresh</string>
    <string name="refresh_header_loadeing">Loading...</string>
    <string name="refresh_header_pulling">Drag down to refresh</string>
    <string name="refresh_header_release">Release to refresh</string>
    <string name="scan_qrcode_dialog_ok">Enable</string>
    <string name="search_menu_title">Search</string>
    <string name="statement_btn_agree">AGREE</string>
    <string name="statement_btn_disagree">DISAGREE</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="udid_str">UDID:</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstall_fail">Uninstall failed:\u0009</string>
    <string name="uninstall_fail_info">Invalid package name.</string>
    <string name="uninstall_pakage_name">App package name</string>
    <string name="uninstall_success">App uninstalled.</string>
    <string name="uninstall_title">Uninstall</string>
    <string name="unzip_hap">Installation failed: Failed to decompress %1$s.</string>
    <string name="upsdk_app_dl_installing">Downloading AppGallery</string>
    <string name="upsdk_app_download_info_new">Install</string>
    <string name="upsdk_app_size">Size</string>
    <string name="upsdk_app_version">Version</string>
    <string name="upsdk_cancel">Cancel</string>
    <string name="upsdk_checking_update_prompt">Checking for updates…</string>
    <string name="upsdk_choice_update">Update available. Please download and install the latest version.</string>
    <string name="upsdk_connect_server_fail_prompt_toast">Unable to connect to server. Please try again later.</string>
    <string name="upsdk_detail">Details</string>
    <string name="upsdk_getting_message_fail_prompt_toast">Unable to retrieve information. Please try again later.</string>
    <string name="upsdk_install">Install AppGallery to update. Install now?</string>
    <string name="upsdk_no_available_network_prompt_toast">No Internet connection. Please check your network settings.</string>
    <string name="upsdk_ota_app_name">App</string>
    <string name="upsdk_ota_cancel">Later</string>
    <string name="upsdk_ota_force_cancel_new">Exit</string>
    <string name="upsdk_ota_notify_updatebtn">Update</string>
    <string name="upsdk_ota_title">New version</string>
    <string name="upsdk_storage_utils">%1$s MB</string>
    <string name="upsdk_store_url">https://store.hispace.hicloud.com/hwmarket/api/</string>
    <string name="upsdk_third_app_dl_cancel_download_prompt_ex">Cancel the installation?</string>
    <string name="upsdk_third_app_dl_install_failed">Installation failed.</string>
    <string name="upsdk_third_app_dl_sure_cancel_download">Yes</string>
    <string name="upsdk_update_check_no_new_version">Your version is up to date.</string>
    <string name="upsdk_updating">Updating</string>
    <string name="user_agreement_file">userAgreement_%1$s_%2$s.htm</string>
    <string name="user_agreement_file_cn">userAgreement_cn_en_%1$s.htm</string>
    <string name="user_agreement_str">HUAWEI DevEco Assistant User Agreement</string>
    <string name="user_agreement_title">User Agreement</string>
    <string name="user_guides">Help</string>
    <string name="user_guides_file">userHelp_en_%1$s.html</string>
    <string name="view_log">Logs</string>
    <string name="wearengine_know_title">Permissions required</string>
    <string name="wearengine_primission_str">To install and uninstall watch apps and obtain watch app logs, you must enable the device management and notifications permissions.</string>
    <string name="welcome">Welcome to</string>
</resources>
