<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="@dimen/margin_xl" android:paddingRight="@dimen/padding_m" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <com.huawei.uikit.hwtextview.widget.HwTextView android:textSize="@dimen/emui_text_size_headline7" android:gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/device_txt_minHeight" android:text="@string/about_us_name" android:textAllCaps="false" />
        <ImageView android:id="@id/img_more" android:padding="@dimen/dimens_6_dp" android:layout_width="@dimen/dimens_40_dp" android:layout_height="@dimen/dimens_40_dp" android:layout_marginRight="@dimen/margin_s" android:src="@drawable/more_pic" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <ImageView android:id="@id/img_target" android:background="@color/colorTransparent" android:layout_width="@dimen/dimens_110_dp" android:layout_height="@dimen/dimens_1_dp" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <RelativeLayout android:orientation="vertical" android:background="@drawable/main_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/watchIcon" android:background="@drawable/watch_pic" android:layout_width="@dimen/dimens_64_dp" android:layout_height="@dimen/dimens_64_dp" android:layout_marginTop="@dimen/dimens_116_dp" android:scaleType="centerInside" android:layout_centerHorizontal="true" />
        <com.huawei.uikit.hwtextview.widget.HwTextView android:textSize="@dimen/emui_text_size_body1" android:textStyle="bold" android:id="@id/deviceNameTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_m" android:layout_below="@id/watchIcon" android:layout_centerHorizontal="true" android:textAllCaps="false" />
        <LinearLayout android:gravity="center" android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/udidLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_xl" android:layout_marginTop="@dimen/margin_l" android:layout_marginRight="@dimen/margin_xl" android:layout_below="@id/deviceNameTxt">
            <com.huawei.uikit.hwtextview.widget.HwTextView android:textSize="@dimen/emui_master_body_1" android:textColor="@color/emui_text_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/udid_str" android:textAllCaps="false" />
            <com.huawei.uikit.hwtextview.widget.HwTextView android:textSize="@dimen/emui_master_body_1" android:textColor="@color/emui_text_hint" android:ellipsize="end" android:id="@id/udidTxt" android:paddingLeft="@dimen/radius_m" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:textAllCaps="false" />
        </LinearLayout>
        <com.huawei.uikit.hwbutton.widget.HwButton android:textSize="@dimen/emui_master_subtitle" android:id="@id/copyBtn" android:padding="@dimen/padding_s" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimens_6_dp" android:text="@string/copy" android:layout_below="@id/udidLayout" android:layout_centerHorizontal="true" android:textAllCaps="false" style="@style/Widget.Emui.HwButton.Borderless" />
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingBottom="@dimen/margin_xl" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <com.huawei.uikit.hwbutton.widget.HwButton android:textSize="@dimen/emui_master_subtitle" android:gravity="center" android:id="@id/refreshDeviceBtn" android:layout_width="@dimen/dimens_160_dp" android:layout_height="@dimen/dimens_36_dp" android:layout_marginTop="@dimen/dimens_32_dp" android:text="@string/connect_devide" android:textAllCaps="false" style="@style/Widget.Emui.HwButton.Emphasize" />
            <com.huawei.uikit.hwbutton.widget.HwButton android:textSize="@dimen/emui_master_subtitle" android:gravity="center" android:id="@id/instanllAppBtn" android:layout_width="@dimen/dimens_160_dp" android:layout_height="@dimen/dimens_36_dp" android:layout_marginTop="@dimen/emui_text_size_body1" android:text="@string/app_manage" android:textAllCaps="false" style="@style/Widget.Emui.HwButton.Emphasize" />
            <com.huawei.uikit.hwbutton.widget.HwButton android:textSize="@dimen/emui_master_subtitle" android:gravity="center" android:id="@id/controlLogBtn" android:layout_width="@dimen/dimens_160_dp" android:layout_height="@dimen/dimens_36_dp" android:layout_marginTop="@dimen/emui_text_size_body1" android:text="@string/view_log" android:textAllCaps="false" style="@style/Widget.Emui.HwButton.Emphasize" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>