<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:paddingBottom="@dimen/padding_xl" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingStart="@dimen/padding_xl" android:paddingEnd="@dimen/padding_xl"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/header_app_logo" android:layout_width="@dimen/privacy_app_logo_size" android:layout_height="@dimen/privacy_app_logo_size" android:layout_marginTop="@dimen/header_notice_top" android:src="@mipmap/logo" android:layout_centerHorizontal="true" />
    <com.huawei.uikit.hwtextview.widget.HwTextView android:textSize="@dimen/emui_text_size_body2" android:textColor="@color/emui_color_text_secondary" android:id="@id/tv_welcome" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xl" android:text="@string/welcome" android:layout_below="@id/header_app_logo" android:layout_centerHorizontal="true" android:fontFamily="HwChinese-medium" />
    <com.huawei.uikit.hwtextview.widget.HwTextView android:textSize="@dimen/privacy_app_name_textsize" android:textColor="@color/emui_color_text_primary" android:gravity="center" android:id="@id/tv_app_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xs" android:text="@string/app_name" android:maxLines="1" android:layout_below="@id/tv_welcome" android:layout_centerHorizontal="true" android:fontFamily="HwChinese-medium" app:hwAutoSizeMinTextSize="@dimen/emui_text_size_body2" app:hwAutoSizeStepGranularity="1.0sp" />
    <com.huawei.uikit.hwtextview.widget.HwTextView android:textSize="@dimen/emui_text_size_body2" android:textColor="@color/emui_color_text_primary" android:gravity="center" android:id="@id/tv_function_introduction" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_xs" android:text="@string/function_introduction" android:layout_below="@id/tv_app_name" android:layout_centerHorizontal="true" android:fontFamily="HwChinese-medium" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/iv_privacy_notice_logo" android:layout_width="@dimen/download_bar_item_icon_size" android:layout_height="@dimen/download_bar_item_icon_size" android:layout_marginBottom="@dimen/margin_l" android:src="@drawable/ic_privacy" android:layout_centerHorizontal="true" />
        <com.huawei.uikit.hwtextview.widget.HwTextView android:textSize="@dimen/emui_master_body_2" android:textColor="@color/emui_color_text_secondary" android:id="@id/tv_privacy_notice_statement" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_xl" />
        <LinearLayout android:orientation="horizontal" android:id="@id/ll_privacy_notice_btn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <com.huawei.uikit.hwbutton.widget.HwButton android:textColor="@color/emui_accent" android:ellipsize="end" android:id="@id/hwbtn_privacy_notice_disagree" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="@dimen/margin_l" android:minHeight="@dimen/emui_button_height" android:text="@string/statement_btn_disagree" android:maxLines="1" android:layout_weight="1.0" app:hwAutoSizeMinTextSize="9.0sp" app:hwAutoSizeStepGranularity="1.0sp" style="@style/Widget.Emui.HwButton" />
            <com.huawei.uikit.hwbutton.widget.HwButton android:ellipsize="end" android:id="@id/hwbtn_privacy_notice_agree" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="@dimen/emui_button_height" android:text="@string/statement_btn_agree" android:maxLines="1" android:layout_weight="1.0" app:hwAutoSizeMinTextSize="9.0sp" app:hwAutoSizeStepGranularity="1.0sp" style="@style/Widget.Emui.HwButton.Emphasize" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>