<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.widget.Toolbar android:id="@id/hwToolbar" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="wrap_content" app:contentInsetLeft="@dimen/emui_dimens_default_bottom_flexible" app:contentInsetStart="@dimen/emui_dimens_default_bottom_flexible" app:contentInsetStartWithNavigation="@dimen/emui_dimens_default_bottom_flexible" />
    <ImageView android:id="@id/iv_app_logo" android:layout_width="@dimen/emui_text_size_headline2" android:layout_height="@dimen/emui_text_size_headline2" android:layout_marginTop="@dimen/dimens_56_dp" android:src="@mipmap/logo" android:layout_below="@id/hwToolbar" android:layout_centerHorizontal="true" />
    <com.huawei.uikit.hwtextview.widget.HwTextView android:textSize="@dimen/emui_text_size_body1" android:textStyle="bold" android:textColor="@color/aboutTitle" android:id="@id/txt_about_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_m" android:text="@string/about_us_name" android:layout_below="@id/iv_app_logo" android:layout_centerHorizontal="true" android:textAllCaps="false" />
    <com.huawei.uikit.hwtextview.widget.HwTextView android:textSize="@dimen/emui_text_size_body2" android:textColor="@color/emui_appbar_subtitle" android:id="@id/txt_about_us_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_s" android:layout_below="@id/txt_about_name" android:layout_centerHorizontal="true" android:textAllCaps="false" />
    <com.huawei.uikit.hwtextview.widget.HwTextView android:textSize="@dimen/emui_master_body_1" android:textColor="@color/emui_accent" android:gravity="center_horizontal" android:id="@id/open_source_license" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_s" android:text="@string/open_source_str" android:maxLines="@integer/int_1" android:layout_above="@id/user_agreement" android:textAllCaps="false" />
    <com.huawei.uikit.hwtextview.widget.HwTextView android:textSize="@dimen/emui_master_body_1" android:textColor="@color/emui_accent" android:gravity="center_horizontal" android:id="@id/user_agreement" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_s" android:text="@string/user_agreement_str" android:maxLines="@integer/int_1" android:layout_above="@id/txt_about_banquan" android:textAllCaps="false" />
    <com.huawei.uikit.hwtextview.widget.HwTextView android:textSize="@dimen/emui_master_body_1" android:textColor="@color/emui_color_text_secondary" android:gravity="center_horizontal" android:id="@id/txt_about_banquan" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_xl" android:text="@string/app_copyright" android:maxLines="@integer/int_1" android:layout_alignParentBottom="true" android:textAllCaps="false" />
</RelativeLayout>