<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/main_menu_bg" android:layout_width="@dimen/dimens_110_dp" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.huawei.uikit.hwtextview.widget.HwTextView android:textSize="@dimen/emui_master_subtitle" android:textColor="@color/emui_color_primary" android:gravity="center_vertical" android:id="@id/updateTxt" android:paddingLeft="@dimen/emui_dimens_default_end" android:paddingTop="@dimen/dimens_6_dp" android:paddingRight="@dimen/emui_dimens_default_end" android:paddingBottom="@dimen/dimens_6_dp" android:layout_width="@dimen/dimens_110_dp" android:layout_height="@dimen/emui_master_display_3" android:text="@string/check_update" android:lines="1" android:textAllCaps="false" android:autoSizeTextType="uniform" />
    <View android:background="@color/emui_color_gray_3" android:layout_width="@dimen/dimens_86_dp" android:layout_height="@dimen/dimens_066_dp" />
    <com.huawei.uikit.hwtextview.widget.HwTextView android:textSize="@dimen/emui_master_subtitle" android:textColor="@color/emui_color_primary" android:gravity="center_vertical" android:id="@id/userHelpTxt" android:paddingLeft="@dimen/emui_dimens_default_end" android:paddingTop="@dimen/dimens_6_dp" android:paddingRight="@dimen/emui_dimens_default_end" android:paddingBottom="@dimen/dimens_6_dp" android:layout_width="@dimen/dimens_110_dp" android:layout_height="@dimen/emui_master_display_3" android:text="@string/user_guides" android:lines="@integer/int_1" android:textAllCaps="false" android:autoSizeTextType="uniform" />
    <View android:background="@color/emui_color_gray_3" android:layout_width="@dimen/dimens_86_dp" android:layout_height="@dimen/dimens_066_dp" />
    <com.huawei.uikit.hwtextview.widget.HwTextView android:textSize="@dimen/emui_master_subtitle" android:textColor="@color/emui_color_primary" android:gravity="center_vertical" android:id="@id/aboutTxt" android:paddingLeft="@dimen/emui_dimens_default_end" android:paddingTop="@dimen/dimens_6_dp" android:paddingRight="@dimen/emui_dimens_default_end" android:paddingBottom="@dimen/dimens_6_dp" android:layout_width="@dimen/dimens_110_dp" android:layout_height="@dimen/emui_master_display_3" android:text="@string/about_label" android:lines="@integer/int_1" android:textAllCaps="false" android:autoSizeTextType="uniform" />
</LinearLayout>